# Enterprise-RAG

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  enterprise_rag_build_prompt.md  pyproject.toml
.github/workflows/: ci.yml
api/: dependencies.py  main.py  models.py  routes.py  worker.py
docs/: AWS_DEPLOYMENT_GUIDE.md  architecture.md
embeddings/: dual_encoder.py  encoder.py
evaluation/: metrics.py
frontend/: app.py
generation/: graph.py  nodes.py  state.py
graph/: legal_patterns.json
ingestion/chunkers/: base.py  hierarchical.py  sentence_window.py
ingestion/parsers/: base.py  registry.py  web_parser.py
lexrag/: config.py  exceptions.py  logger.py
lexrag/embeddings/: encoder.py
lexrag/evaluation/: runner.py
lexrag/generation/: nodes.py
lexrag/graph/: extractor.py  store.py
lexrag/ingestion/: pipeline.py
lexrag/ingestion/chunkers/: factory.py  hierarchical.py  semantic.py  token_counter.py
lexrag/ingestion/parsers/: docling_parser.py  office_parser.py  pdf_parser.py
lexrag/utils/: hashing.py  retry.py  timing.py
retrieval/: hybrid.py  pipeline.py  reranker.py  vector_store.py
scripts/: download_sample_docs.py
tests/: conftest.py
tests/unit/: test_dummy.py
