[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lexrag"
version = "0.1.0"
description = "Enterprise Legal Document Intelligence Platform"
requires-python = ">=3.11"
authors = [
    {name = "Paramveer Singh", email = "paramveer@example.com"}
]
dependencies = [
    "unstructured[all-docs]>=0.12.0",
    "docling>=2.0.0",
    "pymupdf>=1.23.0",
    "llama-index>=0.10.0",
    "llama-index-vector-stores-qdrant>=0.1.0",
    "qdrant-client>=1.7.0",
    "langchain>=0.1.0",
    "langgraph>=0.0.25",
    "langchain-groq>=0.0.1",
    "neo4j>=5.17.0",
    "spacy>=3.7.0",
    "sentence-transformers>=2.3.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.7",
    "httpx>=0.26.0",
    "tenacity>=8.2.0",
    "structlog>=24.1.0",
    "rapidfuzz>=3.0.0",
    "langgraph>=0.0.60",
    "langchain-groq>=0.1.0"
]

[project.optional-dependencies]
dev = [
    "black>=24.2.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
eval = [
    "ragas>=0.1.0",
    "deepeval>=0.21.0",
    "arize-phoenix>=3.0.0",
]

[tool.setuptools.packages.find]
include = ["lexrag", "ingestion", "embeddings", "retrieval", "graph", "generation", "orchestration", "evaluation", "api", "workers"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
